--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -164,7 +164,7 @@ a{
     position: absolute;
     top: 45px;
     right: -18px;
-    z-index: 1;
+    z-index: 0;
     background-color: var(--Baby-Blue-Body);
     border-radius: 10px;
     /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
